// Vitest Snapshot v1

exports[`calculate assistant-charges-sociales > ACRE 1`] = `"[9013,12308,50000,37693]"`;

exports[`calculate assistant-charges-sociales > ACRE 2`] = `"[912,1979,15000,13022]"`;

exports[`calculate assistant-charges-sociales > ACRE 3`] = `"[299,729,5000,4271]"`;

exports[`calculate assistant-charges-sociales > ACRE 4`] = `"[1485,2233,10000,7767]"`;

exports[`calculate assistant-charges-sociales > ACRE 5`] = `"[605,1353,10000,8647]"`;

exports[`calculate assistant-charges-sociales > IJSS (indemnité sécurité sociale) 1`] = `"[11405,14546,50000,35454]"`;

exports[`calculate assistant-charges-sociales > RSA 1`] = `"[78,221,500,278]"`;

exports[`calculate assistant-charges-sociales > RSA 2`] = `"[1017,1447,5000,3552]"`;

exports[`calculate assistant-charges-sociales > conjoint collaborateur 1`] = `"[14097,17392,50000,32607]"`;

exports[`calculate assistant-charges-sociales > conjoint collaborateur 2`] = `"[13586,16881,50000,33119]"`;

exports[`calculate assistant-charges-sociales > conjoint collaborateur 3`] = `"[11466,14761,50000,35239]"`;

exports[`calculate assistant-charges-sociales > conjoint collaborateur 4`] = `"[14097,17392,50000,32607]"`;

exports[`calculate assistant-charges-sociales > conjoint collaborateur 5`] = `"[11466,14761,50000,35239]"`;

exports[`calculate assistant-charges-sociales > débit de tabac 1`] = `"[5652,8932,50000,41068]"`;

exports[`calculate assistant-charges-sociales > international 1`] = `
"[14605,14724,50000,35277]
Notifications affichées : impôt . domiciliation étranger non implémentée"
`;

exports[`calculate assistant-charges-sociales > international 2`] = `"[11872,13257,50000,36743]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 1`] = `"[11365,14660,50000,35340]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 2`] = `"[1368,1798,5000,3202]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 3`] = `"[11369,14649,50000,35351]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 4`] = `"[1369,1784,5000,3216]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 5`] = `"[11369,14649,50000,35351]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 6`] = `"[1369,1784,5000,3216]"`;

exports[`calculate assistant-charges-sociales > nature de l'activité 7`] = `"[9454,12734,50000,37266]"`;

exports[`calculate assistant-charges-sociales > échelle de revenus 1`] = `
"[1042,1185,500,0]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate assistant-charges-sociales > échelle de revenus 2`] = `
"[1042,1217,1000,0]
Notifications affichées : entreprise . imposition . IR . information sur le report de déficit"
`;

exports[`calculate assistant-charges-sociales > échelle de revenus 3`] = `"[1065,1272,1500,228]"`;

exports[`calculate assistant-charges-sociales > échelle de revenus 4`] = `"[1109,1348,2000,652]"`;

exports[`calculate assistant-charges-sociales > échelle de revenus 5`] = `"[1368,1798,5000,3202]"`;

exports[`calculate assistant-charges-sociales > échelle de revenus 6`] = `"[2201,2949,10000,7050]"`;

exports[`calculate assistant-charges-sociales > échelle de revenus 7`] = `
"[20925,27403,100000,72596]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate assistant-charges-sociales > échelle de revenus 8`] = `
"[106445,170227,1000000,829773]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-artiste-auteur > bnc 1`] = `"[1230]"`;

exports[`calculate simulations-artiste-auteur > bnc 2`] = `"[1863]"`;

exports[`calculate simulations-artiste-auteur > bnc 3`] = `
"[931]
Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur > salarié 1`] = `
"[160]
Notifications affichées : artiste-auteur . cotisations . avertissement trimestres retraite"
`;

exports[`calculate simulations-artiste-auteur > salarié 2`] = `"[1603]"`;

exports[`calculate simulations-artiste-auteur > salarié 3`] = `"[12410]"`;

exports[`calculate simulations-auto-entrepreneur > ACRE 1`] = `"[22962,247,20000,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur > ACRE 2`] = `
"[22630,219,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 3`] = `"[34443,370,30000,0,30000]"`;

exports[`calculate simulations-auto-entrepreneur > ACRE 4`] = `
"[45273,439,40000,0,40000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > ACRE 5`] = `
"[21390,116,20000,0,20000]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 1`] = `"[20000,292,16500,0,16500]"`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 2`] = `"[20000,318,16180,0,16180]"`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 3`] = `"[20000,301,16388,0,16388]"`;

exports[`calculate simulations-auto-entrepreneur > activité mixte 4`] = `"[null,715,null,null,null]"`;

exports[`calculate simulations-auto-entrepreneur > aides 1`] = `"[5741,62,5000,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur > aides 2`] = `"[57419,618,50000,237,49763]"`;

exports[`calculate simulations-auto-entrepreneur > impôt sur le revenu 1`] = `"[32134,594,25000,707,24293]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 1`] = `"[574,6,500,0,500]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 2`] = `"[1148,12,1000,0,1000]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 3`] = `"[2296,25,2000,0,2000]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 4`] = `"[5741,62,5000,0,5000]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 5`] = `"[11481,123,10000,0,10000]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 6`] = `"[22962,247,20000,0,20000]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 7`] = `"[57419,618,50000,237,49763]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 8`] = `"[80381,865,70000,1301,68699]"`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 9`] = `
"[114824,1235,100000,3912,96088]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-auto-entrepreneur > échelle de revenus 10`] = `
"[1148298,12358,1000000,131652,868348]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement, entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 1`] = `"[200,166,34,0,112,112,0]"`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 2`] = `"[20000000,11149363,3440000,5410637,11184000,11184000,48]"`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 3`] = `"[200,112,34,40,112,112,36]"`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 4`] = `"[20000,14985,3440,613,11184,11184,5]"`;

exports[`calculate simulations-dividendes > barème défauts 1`] = `"[200,166,34,0,112,112,0]"`;

exports[`calculate simulations-dividendes > barème défauts 2`] = `"[20000000,11113031,3440000,5446969,11184000,11184000,49]"`;

exports[`calculate simulations-dividendes > barème défauts 3`] = `"[200,111,34,47,112,112,42]"`;

exports[`calculate simulations-dividendes > barème défauts 4`] = `"[20000,13205,3440,2244,11184,11184,20]"`;

exports[`calculate simulations-dividendes > pfu 1`] = `"[200,140,34,26,120,120,0]"`;

exports[`calculate simulations-dividendes > pfu 2`] = `"[20000000,14000000,3440000,2560000,12000000,12000000,0]"`;

exports[`calculate simulations-impot-société > bénéfices 1`] = `
"[0,0]
Notifications affichées : entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-impot-société > bénéfices 2`] = `"[0,0]"`;

exports[`calculate simulations-impot-société > bénéfices 3`] = `"[300,0]"`;

exports[`calculate simulations-impot-société > bénéfices 4`] = `"[3000,0]"`;

exports[`calculate simulations-impot-société > bénéfices 5`] = `"[48628,0]"`;

exports[`calculate simulations-impot-société > bénéfices 6`] = `"[525628,0]"`;

exports[`calculate simulations-impot-société > bénéfices 7`] = `"[5295628,149646]"`;

exports[`calculate simulations-impot-société > prorata temporis 1`] = `"[260628,0]"`;

exports[`calculate simulations-impot-société > prorata temporis 2`] = `"[277936,0]"`;

exports[`calculate simulations-impot-société > prorata temporis 3`] = `"[272981,0]"`;

exports[`calculate simulations-indépendant > acre 1`] = `"[73019,23019,50000,51980,9516,40484,0,73019,1408]"`;

exports[`calculate simulations-indépendant > activité 1`] = `"[29086,9086,20000,20787,898,19102,0,29086,3559]"`;

exports[`calculate simulations-indépendant > activité 2`] = `"[29102,9102,20000,20787,898,19102,0,29102,3575]"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `"[77175,27175,50000,52092,9550,40450,0,77175,7308]"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `"[78236,28236,50000,52121,9558,40442,0,78236,4487]"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `"[80757,30757,50000,52189,9579,40421,0,80757,4811]"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `"[75298,25298,50000,52041,9534,40466,0,75298,3809]"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `"[75297,25297,50000,52041,9534,40466,0,75297,3951]"`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"[652221,152221,500000,517706,220485,279515,0,652221,4487]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `"[30000,13181,16819,17881,433,16386,0,30000,3559]"`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `"[30000,14381,15619,17881,433,15186,0,30000,3559]"`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `"[30000,10381,19619,20431,841,18778,0,30000,3559]"`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `"[20000,6732,13268,13809,0,13268,0,20000,3559]"`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"[300000,79617,220383,228526,82145,138238,0,300000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"[300000,83117,216883,225026,80570,136313,0,300000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `"[1375,1275,100,135,0,100,0,1375,3559]"`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `"[244,144,100,104,0,100,0,244,3211]"`;

exports[`calculate simulations-indépendant > exonération covid 1`] = `"[71347,21347,50000,51815,9550,40450,0,71347,103]"`;

exports[`calculate simulations-indépendant > exonération covid 2`] = `"[500,12977,50000,51032,9315,40685,0,62977,103]"`;

exports[`calculate simulations-indépendant > exonération covid 3`] = `"[50000,17475,50000,51440,9438,40562,0,67475,140]"`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"[45000,10908,34092,35311,4515,29577,0,45000,2350]
Notifications affichées : dirigeant . indépendant . cotisations et contributions . exonérations . pension invalidité"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 1`] = `
"[100000,30100,69900,72612,15030,54870,0,100000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant > imposition à l'IS 2`] = `
"[100000,30100,69900,72612,15030,54870,0,100000,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `"[29086,9086,20000,20787,603,19397,0,29086,3559]"`;

exports[`calculate simulations-indépendant > impôt sur le revenu 2`] = `"[73019,23019,50000,51980,8213,41787,0,73019,3559]"`;

exports[`calculate simulations-indépendant > impôt sur le revenu 3`] = `"[29086,9086,20000,20787,2079,17921,0,29086,3559]"`;

exports[`calculate simulations-indépendant > inversions 1`] = `"[2000,1386,614,666,0,614,0,2000,3559]"`;

exports[`calculate simulations-indépendant > inversions 2`] = `"[50000,16004,33996,35351,4527,29469,0,50000,3559]"`;

exports[`calculate simulations-indépendant > inversions 3`] = `"[14597,4597,10000,10394,0,10000,0,14597,3559]"`;

exports[`calculate simulations-indépendant > inversions 4`] = `"[72000,22703,49297,51249,9297,40000,0,72000,3559]"`;

exports[`calculate simulations-indépendant > inversions 5`] = `"[14597,4597,10000,10394,0,10000,1000,15597,3559]"`;

exports[`calculate simulations-indépendant > inversions 6`] = `"[19000,5929,13071,13584,0,13071,1000,20000,3559]"`;

exports[`calculate simulations-indépendant > inversions 7`] = `"[18000,5627,12373,12860,0,12373,2000,20000,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `"[1861,1361,500,548,0,500,0,1861,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `"[2466,1466,1000,1064,0,1000,0,2466,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `"[3075,1575,1500,1581,0,1500,0,3075,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `"[3683,1683,2000,2097,0,2000,0,3683,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `"[7428,2428,5000,5199,0,5000,0,7428,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `"[14597,4597,10000,10394,0,10000,0,14597,3559]"`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"[139589,39589,100000,103788,28275,71725,0,139589,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"[1239948,239948,1000000,1033666,473305,526695,0,1239948,3559]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `"[7434,0,2434,5000,0,5000,36,3,67]"`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `"[24242,0,4242,20000,876,19124,36,4,266]"`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"[69846,0,19846,50000,9490,40510,108,4,531]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 4`] = `"[7434,0,2434,5000,0,5000,36,3,67]"`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"[90886,0,30886,60000,12661,47339,180,4,533]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"[90334,0,30334,60000,12657,47343,180,4,533]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"[90012,0,30012,60000,12654,47346,180,4,708]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"[92076,0,32076,60000,12671,47329,180,4,533]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"[90530,0,30530,60000,12658,47342,180,4,805]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `"[4895,0,3895,1000,0,1000,36,2,122]"`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"[93016,0,33016,60000,12679,47321,180,4,533]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"[47070,0,7070,40000,6304,33696,36,4,400]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `"[1598,0,1098,500,0,500,0,2,61]"`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `"[13289,0,3289,10000,0,10000,9,4,133]"`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `"[null,0,null,10000,null,null,null,null,null]"`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 4`] = `"[null,0,null,50000,null,null,null,null,null]"`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 5`] = `"[null,0,null,100000,null,null,null,null,null]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `"[3277,0,2777,500,0,500,36,2,61]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `"[3838,0,2838,1000,0,1000,36,2,61]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `"[4398,0,2898,1500,0,1500,36,2,61]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `"[4959,0,2959,2000,0,2000,36,2,61]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `"[8377,0,3377,5000,0,5000,36,3,67]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `"[14552,0,4552,10000,0,10000,36,4,134]"`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"[147523,0,47523,100000,28363,71637,432,4,538]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"[1239427,0,239427,1000000,473298,526702,468,4,550]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `"[30000,0,8078,21922,1208,20714,0,4,293]"`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `"[30000,0,8398,21602,1157,20445,0,4,289]"`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `"[300000,0,62883,237117,89673,147444,0,4,550]"`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"[50000,0,11135,38865,5988,32877,0,4,518]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"[50000,0,11805,38195,5787,32408,0,4,510]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `"[20000,0,5014,14986,57,14929,0,4,200]"`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"[50000,0,14816,35184,4884,30300,0,4,471]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `"[50000,0,14385,35615,5011,30604,0,4,476]"`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `"[50000,0,22059,27941,2710,25231,0,4,378]"`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `"[300000,0,87915,212085,78409,133676,0,4,550]"`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `"[400000,0,108031,291969,117164,174805,0,4,550]"`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"[120000,0,36415,83585,21327,62258,0,4,536]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `"[50000,0,14385,35615,5011,30604,0,4,476]"`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `"[50000,0,12479,37521,5584,31937,0,4,501]"`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"[20000,0,5190,14810,29,14781,0,4,198]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"[4000,0,1315,2685,0,2685,0,2,61]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"[20000,0,5190,14810,29,14781,0,4,198]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"[20000,0,5267,14733,17,14716,0,4,197]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"[20000,0,5343,14657,4,14653,0,4,196]
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > ACRE 1`] = `
"[606,7272,0,7146,4,13]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > ACRE 2`] = `
"[1249,14993,0,14467,4,26]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > ACRE 3`] = `
"[1893,22714,0,21789,4,40]
Notifications affichées : dirigeant . assimilé salarié . réduction ACRE . notification taux annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 1`] = `"[1391,16698,0,16084,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 2`] = `"[1391,16698,0,16084,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 3`] = `"[1391,16698,0,16084,4,29]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 4`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 5`] = `
"[14490,173883,0,151717,4,47]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 6`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > Contrats Madelin 7`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > JEI 1`] = `"[2829,33949,0,32329,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > activités 1`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > activités 2`] = `"[917,10998,0,10679,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > activités 3`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > activités 4`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > activités 5`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > activités 6`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > avec charges 1`] = `"[442,5299,0,5275,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > avec charges 2`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 1`] = `"[-30,-361,0,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 2`] = `"[14,170,0,137,0,1]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 3`] = `"[62,740,0,316,0,2]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 4`] = `"[204,2450,0,2573,2,5]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 5`] = `"[442,5299,0,5275,4,10]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 6`] = `"[917,10998,0,10679,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 7`] = `"[2341,28096,0,26893,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (assimilé salarié) > échelle de rémunération 8`] = `
"[4758,57101,0,52069,4,47]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > ACRE 1`] = `
"[0,9350,9350,1450,2,0]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > ACRE 2`] = `
"[0,18700,18700,2900,3,8]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > ACRE 3`] = `
"[0,28050,28050,4350,4,12]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 1`] = `"[0,34828,34828,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 2`] = `"[0,34828,34828,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 3`] = `"[0,34828,34828,5800,4,16]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 4`] = `"[0,18291,18291,3045,4,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 5`] = `
"[0,274317,274317,20568,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement, entreprise . imposition . régime . micro-entreprise . alerte seuil dépassés"
`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 6`] = `"[0,17856,17856,2973,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > Contrats Madelin 7`] = `"[0,17420,17420,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > JEI 1`] = `"[2829,33949,0,32329,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > activités 1`] = `"[0,15560,15560,6600,4,18]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > activités 2`] = `"[0,15520,15520,6600,4,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > activités 3`] = `"[0,17332,17332,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > activités 4`] = `"[0,15444,15444,5000,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > activités 5`] = `"[0,17420,17420,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > activités 6`] = `"[0,15568,15568,5000,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > avec charges 1`] = `"[0,10452,10452,1740,3,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > avec charges 2`] = `"[0,30485,30485,5075,4,14]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 1`] = `"[0,87,87,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 2`] = `"[0,871,871,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 3`] = `"[0,1742,1742,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 4`] = `"[0,4355,4355,725,1,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 5`] = `"[0,8710,8710,1450,2,0]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 6`] = `"[0,17420,17420,2900,3,8]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 7`] = `"[0,43538,43538,7250,4,20]"`;

exports[`calculate simulations-rémunération-dirigeant (auto-entrepreneur) > échelle de rémunération 8`] = `
"[0,87088,87088,14500,4,40]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > ACRE 1`] = `
"[0,null,null,null,null,null]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > ACRE 2`] = `
"[0,null,null,null,null,null]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > ACRE 3`] = `
"[0,null,null,null,null,null]
Notifications affichées : dirigeant . auto-entrepreneur . notification calcul ACRE annuel"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 1`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 2`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 3`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 4`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 5`] = `
"[0,261252,261252,20568,4,56]
Notifications affichées : entreprise . chiffre d'affaires . franchise de TVA . dépassement, entreprise . imposition . IS . information sur le report de déficit"
`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 6`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > Contrats Madelin 7`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > JEI 1`] = `"[2829,33949,0,32329,4,47]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > activités 1`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > activités 2`] = `"[0,null,null,null,null,0]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > activités 3`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > activités 4`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > activités 5`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > activités 6`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > avec charges 1`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > avec charges 2`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 1`] = `"[0,87,87,0,0,0]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 2`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 3`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 4`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 5`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 6`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 7`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-rémunération-dirigeant (indépendant) > échelle de rémunération 8`] = `"[0,null,null,null,null,null]"`;

exports[`calculate simulations-salarié > CCN HCR 1`] = `
"[3536,0,2500,2005,1894]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 1`] = `
"[3948,0,2500,1987,1878]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 2`] = `
"[3917,0,2500,1972,1864]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN batiment 3`] = `
"[3975,0,2500,1979,1867]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN compta 1`] = `
"[3431,0,2500,2006,1898]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN optique 1`] = `
"[3585,0,2500,2068,1953]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN spectacle vivant 1`] = `
"[3796,0,2500,2155,2039]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > CCN sport 1`] = `
"[535,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > JEI 1`] = `"[3434,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié > JEI 2`] = `
"[26574,0,20000,15969,10359]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > activité partielle 1`] = `
"[20,0,1560,1247,1247]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > activité partielle 2`] = `"[980,0,4000,2220,2098]"`;

exports[`calculate simulations-salarié > activité partielle 3`] = `"[2223,0,8000,4462,3639]"`;

exports[`calculate simulations-salarié > activité partielle 4`] = `"[1614,0,4000,2405,2217]"`;

exports[`calculate simulations-salarié > activité partielle 5`] = `"[2903,0,4000,2683,2406]"`;

exports[`calculate simulations-salarié > activité partielle 6`] = `"[740,3750,3000,1660,1609]"`;

exports[`calculate simulations-salarié > activité partielle 7`] = `"[980,0,4000,2220,2185]"`;

exports[`calculate simulations-salarié > activité partielle 8`] = `"[351,0,2000,1578,1544]"`;

exports[`calculate simulations-salarié > activité partielle 9`] = `"[1216,0,2000,1570,1536]"`;

exports[`calculate simulations-salarié > activité partielle 10`] = `"[2360,0,6000,4182,3498]"`;

exports[`calculate simulations-salarié > activité partielle 11`] = `"[4392,0,9000,6147,4790]"`;

exports[`calculate simulations-salarié > aides 1`] = `"[2296,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > aides 2`] = `
"[12819,0,10000,8911,7538]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé, contrat salarié . régime des impatriés . information"
`;

exports[`calculate simulations-salarié > aides 3`] = `"[2002,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > aides 4`] = `
"[2609,0,2000,1720,1656]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié > aides 5`] = `"[1836,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > aides 6`] = `"[2086,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > aides embauche covid 1`] = `
"[1232,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > aides embauche covid 2`] = `"[7079,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié > aides embauche covid 3`] = `
"[1443,0,1500,1284,1284]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > aides embauche covid 4`] = `
"[881,0,1500,1454,1454]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > apprentissage 1`] = `
"[1547,0,1500,1454,1454]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > apprentissage 2`] = `
"[1381,0,1500,1454,1454]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > atmp 1`] = `"[2474,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > avantages 1`] = `"[2607,0,2000,1540,1490]"`;

exports[`calculate simulations-salarié > avantages 2`] = `"[2617,0,2000,1539,1489]"`;

exports[`calculate simulations-salarié > avantages 3`] = `"[2527,0,2000,1549,1500]"`;

exports[`calculate simulations-salarié > cadre 1`] = `"[4116,0,3000,2348,2160]"`;

exports[`calculate simulations-salarié > cdd 1`] = `
"[3234,0,2200,1894,1815]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 2`] = `
"[3509,0,2200,2009,1897]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 3`] = `
"[3781,0,2200,2197,2084]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 4`] = `
"[4416,0,2200,2370,2179]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié > cdd 5`] = `
"[3795,0,2200,1920,1841]
Notifications affichées : contrat salarié . CDD . information, contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > contrat pro 1`] = `"[899,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié > contrat pro 2`] = `"[1566,0,1500,1165,1165]"`;

exports[`calculate simulations-salarié > effectif 1`] = `"[2419,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > effectif 2`] = `"[2466,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > effectif 3`] = `"[2479,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > effectif 4`] = `"[2479,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > frais pro - DFS 1`] = `"[2138,0,2000,1630,1630]"`;

exports[`calculate simulations-salarié > frais pro - DFS 2`] = `"[2259,0,2000,1584,1549]"`;

exports[`calculate simulations-salarié > frais pro - DFS 3`] = `"[2190,0,2000,1606,1557]"`;

exports[`calculate simulations-salarié > frais pro - DFS 4`] = `"[2190,0,2000,1606,1557]"`;

exports[`calculate simulations-salarié > frais pro - DFS 5`] = `"[2419,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > frais pro - DFS 6`] = `"[1764,0,1700,1358,1358]"`;

exports[`calculate simulations-salarié > frais pro - DFS 7`] = `"[3281,0,2600,2125,2092]"`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 1`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 2`] = `"[5012,0,3200,2916,2619]"`;

exports[`calculate simulations-salarié > frais pro - abo transports + transports personnels 3`] = `"[4688,0,3200,2836,2637]"`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 1`] = `"[4380,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 2`] = `"[5090,0,3200,3261,3064]"`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 3`] = `"[4380,0,3200,2551,2354]"`;

exports[`calculate simulations-salarié > frais pro - abonnement transports publics 4`] = `"[4356,0,3200,2527,2330]"`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 1`] = `"[2459,0,2000,1521,1487]"`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 2`] = `"[4300,0,3000,2135,1945]"`;

exports[`calculate simulations-salarié > frais pro - titres restaurant 3`] = `"[2503,0,2000,1493,1458]"`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 1`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 2`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 3`] = `"[5008,0,3200,2913,2617]"`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 4`] = `"[4382,0,3200,2553,2356]"`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 5`] = `"[4390,0,3200,2548,2349]"`;

exports[`calculate simulations-salarié > frais pro - transports personnels seul 6`] = `"[4118,0,3200,2583,2381]"`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 1`] = `"[2522,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 2`] = `"[2481,0,2000,1606,1572]"`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 3`] = `"[2592,0,2000,1636,1601]"`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 4`] = `
"[2518,0,2000,1632,1598]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 5`] = `
"[2485,0,2000,1606,1572]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 6`] = `
"[2469,0,2000,1601,1566]
Notifications affichées : contrat salarié . convention collective . contrôle décharge"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 7`] = `
"[3330,2446,2000,1919,1886]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > heures supplémentaires et complémentaires 8`] = `
"[3279,2286,2000,1889,1856]
Notifications affichées : contrat salarié . temps de travail . contrôle heures complémentaires 10 pourcents"
`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 1`] = `"[4070,0,3000,2353,2336]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 2`] = `"[4070,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 3`] = `"[4070,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 4`] = `"[4070,0,3000,2353,1911]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 5`] = `"[4070,0,3000,2353,2219]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 6`] = `"[12886,0,9000,7156,6052]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 7`] = `"[12886,0,9000,7156,6342]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 8`] = `"[12886,0,9000,7156,6859]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 9`] = `"[4070,0,3000,2353,2178]"`;

exports[`calculate simulations-salarié > impôt sur le revenu - quotient familial 10`] = `"[4070,0,3000,2353,2353]"`;

exports[`calculate simulations-salarié > impôt sur le revenu 1`] = `"[4070,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié > impôt sur le revenu 2`] = `
"[41833,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 3`] = `
"[4960,0,3000,2846,2559]
Notifications affichées : contrat salarié . CDD . information"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 4`] = `"[3825,0,3000,2353,2252]"`;

exports[`calculate simulations-salarié > impôt sur le revenu 5`] = `
"[41833,0,30000,24227,14685]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 6`] = `"[4070,0,3000,2626,2485]"`;

exports[`calculate simulations-salarié > impôt sur le revenu 7`] = `
"[41833,0,30000,26966,16655]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > impôt sur le revenu 8`] = `"[4070,0,3000,2353,2107]"`;

exports[`calculate simulations-salarié > inversions 1`] = `"[2000,0,1777,1385,1378]"`;

exports[`calculate simulations-salarié > inversions 2`] = `"[3463,0,2554,2000,1889]"`;

exports[`calculate simulations-salarié > inversions 3`] = `"[3668,0,2703,2117,2000]"`;

exports[`calculate simulations-salarié > lodeom 1`] = `
"[1588,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > lodeom 2`] = `"[2081,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > lodeom 3`] = `"[3825,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié > lodeom 4`] = `"[5428,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié > lodeom 5`] = `"[7784,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 1`] = `
"[1588,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 2`] = `"[2081,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 3`] = `"[3344,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 4`] = `"[5248,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié > lodeom compétitivité renforcée 5`] = `"[7784,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 1`] = `
"[1588,0,1521,1182,1182]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 2`] = `"[2081,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 3`] = `"[3194,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 4`] = `"[4552,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié > lodeom innovation et croissance 5`] = `"[7724,0,5500,4349,3634]"`;

exports[`calculate simulations-salarié > stage 1`] = `
"[500,0,500,500,500]
Notifications affichées : contrat salarié . stage . avertissement, contrat salarié . stage . contrôle gratification minimale"
`;

exports[`calculate simulations-salarié > stage 2`] = `
"[2484,0,2000,1750,1750]
Notifications affichées : contrat salarié . stage . avertissement"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 1`] = `
"[1601,0,1521,1195,1195]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 2`] = `"[3382,0,2500,1979,1869]"`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 3`] = `
"[1588,0,1521,1170,1170]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > taux spécifiques retraite complémentaire 4`] = `"[3342,0,2500,1938,1830]"`;

exports[`calculate simulations-salarié > temps partiel 1`] = `"[2536,2188,2000,1561,1527]"`;

exports[`calculate simulations-salarié > temps partiel 2`] = `"[2501,2500,1857,1448,1428]"`;

exports[`calculate simulations-salarié > temps partiel 3`] = `
"[1122,1750,1000,770,770]
Notifications affichées : contrat salarié . temps de travail . temps partiel . contrôle temps min"
`;

exports[`calculate simulations-salarié > treizième mois 1`] = `"[3345,0,2300,1950,1842]"`;

exports[`calculate simulations-salarié > treizième mois 2`] = `"[3794,2965,2300,2186,2071]"`;

exports[`calculate simulations-salarié > treizième mois 3`] = `"[2984,0,2300,1799,1733]"`;

exports[`calculate simulations-salarié > échelle de salaires 1`] = `
"[123,0,100,57,57]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 2`] = `
"[278,0,250,176,176]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 3`] = `
"[535,0,500,374,374]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 4`] = `
"[793,0,750,572,572]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 5`] = `
"[1050,0,1000,770,770]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 6`] = `
"[1308,0,1250,968,968]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 7`] = `
"[1566,0,1500,1165,1165]
Notifications affichées : contrat salarié . rémunération . contrôle smic"
`;

exports[`calculate simulations-salarié > échelle de salaires 8`] = `"[2419,0,2000,1561,1527]"`;

exports[`calculate simulations-salarié > échelle de salaires 9`] = `"[3360,0,2500,1957,1848]"`;

exports[`calculate simulations-salarié > échelle de salaires 10`] = `"[4070,0,3000,2353,2168]"`;

exports[`calculate simulations-salarié > échelle de salaires 11`] = `"[5428,0,4000,3146,2755]"`;

exports[`calculate simulations-salarié > échelle de salaires 12`] = `"[7079,0,5000,3948,3298]"`;

exports[`calculate simulations-salarié > échelle de salaires 13`] = `
"[14315,0,10000,7958,5892]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 14`] = `
"[28342,0,20000,15969,10359]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 15`] = `
"[128588,0,100000,87157,45821]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;

exports[`calculate simulations-salarié > échelle de salaires 16`] = `
"[1244012,0,1000000,896257,445643]
Notifications affichées : contrat salarié . rémunération . contrôle salaire élevé"
`;
